Group-Learning PAge UI/UX

--- a/templates/group_learning/base.html
+++ b/templates/group_learning/base.html
@@ -78,6 +78,8 @@
             50% { opacity: 0.5; }
         }
     </style>
+    
+    {% block extra_head %}{% endblock %}
 </head>
 <body class="bg-gray-50 min-h-screen">
     <!-- Navigation -->
