--- a/templates/base.html
+++ b/templates/base.html
@@ -129,6 +129,9 @@
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="dns-prefetch" href="//cdn.tailwindcss.com">
     <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
+    
+    <!-- Extra head content for child templates -->
+    {% block extra_head %}{% endblock %}
 </head>
 <body data-theme="modern" class="bg-base-100">
     
